<package>
  <name>kuka_lwr_fri</name>
  <version>2.8.0</version>
  <description>
    This package contains the components of the Kuka FRI typekit package
  </description>
  <license>prop</license>
  <author email="ruben.smits@mech.kuleuven.be">Ruben Smits</author>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orogen</build_depend>
  <build_depend>metaruby</build_depend>
  <build_depend>typegen</build_depend>
  <build_depend>typelib</build_depend>
</package>
